# mappa-enterprise-server

./: .gitignore  README.md  requirements.txt
apps/gateway/: alembic.ini  pyproject.toml
apps/gateway/gateway/: app.py  main.py
apps/gateway/gateway/config/: app_container.py  config.dev.yml  config.prod.yml  config.yml
apps/gateway/gateway/connection_info/: container.py  router.py
apps/gateway/gateway/context_var/: container.py  router.py
apps/gateway/gateway/gateway_api/: container.py  router.py
apps/gateway/gateway/integration/: container.py  router.py
apps/gateway/gateway/parameter_mapping/: container.py  router.py
apps/gateway/gateway/route/: container.py  router.py
apps/gateway/migrations/: env.py
apps/gateway/migrations/versions/: 00000001_init_gateway.py  00000002_tenant_id_güncellemesi.py  00000003_route_add_column_query.py  00000004_gateway_api_context_variables.py  00000005_multi_tenant.py  00000006_route_set_null_fk.py  00000007_integration_add_column.py  00000008_route_add_columns.py  00000009_outbox_pattern.py  00000010_full_logging.py
apps/gateway/tests/: conftest.py  data.py  test_connection_info.py  test_context_var.py  test_gateway_api.py  test_gomap_data.py  test_integration.py  test_parameter_mapping.py  test_route.py
apps/manage/: pyproject.toml
apps/manage/manage/: app.py  check_redirect_uris.py  main.py
apps/manage/manage/api/: container.py  router.py
apps/manage/manage/api_scope/: container.py  router.py
apps/manage/manage/client/: container.py  router.py
apps/manage/manage/client_api/: container.py  router.py
apps/manage/manage/client_api_scope/: container.py  router.py
apps/manage/manage/config/: app_container.py  config.dev.yml  config.prod.yml  config.yml
apps/manage/manage/invitation/: container.py  router.py
apps/manage/manage/ldap_server/: container.py  router.py
apps/manage/manage/organization/: container.py  router.py
apps/manage/manage/organization_client/: container.py  router.py
apps/manage/manage/organization_role/: container.py  router.py
apps/manage/manage/organization_type/: container.py  router.py
apps/manage/manage/organization_user/: container.py  router.py
apps/manage/manage/ping/: container.py  router.py
apps/manage/manage/profile_adaptor/: container.py  router.py
apps/manage/manage/role/: container.py  router.py
apps/manage/manage/role_api_scope/: container.py  router.py
apps/manage/manage/role_user/: container.py  router.py
apps/manage/manage/tenant/: container.py  router.py
apps/manage/manage/tenant_client/: container.py
apps/manage/manage/tenant_user/: container.py
apps/manage/manage/user/: container.py  router.py
apps/manage/manage/user_variable_type/: container.py  router.py
apps/manage/migrations/: env.py  script.py.mako
apps/manage/migrations/versions/: 000000013_client_logo_url_update.py  00000001_init_manage.py  00000002_tenant_id_güncellemesi.py  00000003_manage_user_cascade_eklendi.py  00000004_multi_tenant.py  00000005_first_party_api.py  00000006_role_user_api_scope.py  00000007_client_update.py  00000008_tenant_name_uk_1.py  00000009_workspace_client_update.py  00000010_invitation_add_uk.py  00000011_organization_islemleri.py  00000012_organization_client_iliskisi.py  00000014_organization_add_geo_column.py  00000015_add_table_user_variable_type.py  00000016_user_add_column_context.py  00000017_ldap_server.py  00000018_ldap_server_conn_user.py  00000019_ldap_server_scope.py  00000020_search_filter_and_base_with_ldap.py  00000021_add_scoep_file_store.py
apps/manage/tests/: __init__.py  conftest.py  data.py  test_api.py  test_api_scope.py  test_client.py  test_client_api_scope.py  test_manage.py  test_organization.py  test_organization_client.py  test_organization_role.py  test_organization_type.py  test_organization_user.py  test_profile_adaptor.py  test_role.py  test_role_api_scope.py  test_role_user.py  test_tenant.py  test_user.py  test_user_variable_type.py
apps/messaging/: alembic.ini  pyproject.toml
apps/messaging/messaging/: app.py  main.py
apps/messaging/messaging/config/: app_container.py  config.dev.yml  config.yml
apps/messaging/messaging/message/: container.py  entity.py  minio_service.py  model.py  repository.py  router.py  service.py
apps/messaging/messaging/mqtt_processor/: handlers.py  processor.py
apps/messaging/messaging/outbox/: container.py  model.py  outbox_entity.py  repository.py  service.py  service_messenger.py
apps/messaging/messaging/room/: container.py  entity.py  model.py  repository.py  router.py  service.py
apps/messaging/messaging/signal/: repository.py  service.py
apps/messaging/migrations/: env.py
apps/messaging/migrations/versions/: 00000001_init_messaging.py  00000002_create_messaging_tables.py  00000003_keyset_indexes.py
apps/mock_app/: pyproject.toml
apps/mock_app/mock_app/: app.py  main.py
apps/mock_app/mock_app/config/: app_container.py  config.dev.yml  config.yml  (+1 more)
apps/service/: logging_config.py  pyproject.toml
apps/service/service/: app.py  main.py
apps/service/tests/: conftest.py  data.py  data_adhoc_crud.py  data_adhoc_kisi.py  data_adhoc_kisi_sql.py  data_adhoc_lookup.py  data_adhoc_nodes.py  data_adhoc_ora.py  data_function.py  data_http.py  data_http2.py  data_soap.py  data_spatial.py  test_ad_hoc.py  test_ad_hoc2.py  test_ad_hoc3.py  test_ad_hoc4.py  test_cache_performance.py  test_function.py  test_http.py  test_http2.py  test_soap.py  test_spatial.py  test_table_repository.py
libs/core/: pyproject.toml
libs/core/tests/: conftest.py  test_esp_core.py
libs/gateway/: pyproject.toml
libs/gateway/tests/: conftest.py  data.py  data_spatial.py  test_connection_info.py  test_context_var.py  test_gateway_api.py  test_integration.py  test_parameter_mapping.py  test_route.py  test_soap.py  test_spatial.py
libs/test/: pyproject.toml
libs/test/tests/: test_test.py
(+618 files in other folders)
