[tool.poetry]
name = "app-gateway"
version = "0.1.0"
description = ""
authors = ["kgulenc <kuntaygulenc@gmail.com>"]
packages = [
    { include = "gateway" },
    { include = "tests" } 
]

[tool.poetry.dependencies]
python = "^3.12"
lib-app = {path = "../../libs/app", develop = true}
lib-core = {path = "../../libs/core", develop = true}
lib-gateway = {path = "../../libs/gateway", develop = true}
oracledb = "2.5.0"
zeep = "4.2.1"
requests_cache = "0.9.8" 

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
pylint = "2.17.5"
lib-test = {path = "../../libs/test"}

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
