[tool.poetry]
name = "app-mock_app"
version = "0.1.0"
description = ""
authors = ["kgulenc <kuntaygulenc@gmail.com>"]
packages = [
    { include = "mock_app" },
]

[tool.poetry.dependencies]
python = "^3.12"
lib-app = {path = "../../libs/app"}
lib-core = {path = "../../libs/core"}

[tool.poetry.dev-dependencies]
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
pylint = "2.17.5"
lib-test = {path = "../../libs/test"}

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
