[tool.poetry]
name = "app-service"
version = "0.1.0"
description = ""
authors = ["kgulenc <kuntaygulenc@gmail.com>"]
packages = [
    { include = "service" },
]

[tool.poetry.dependencies]
python = "^3.12"
lib-app = {path = "../../libs/app", develop = true}
lib-core = {path = "../../libs/core", develop = true}
lib-service = {path = "../../libs/service", develop = true}
lib-gateway = {path = "../../libs/gateway", develop = true}
pygml = "0.2.2"
owslib = "0.29.3"
pyproj = "3.6.1"
numpy = "2.3.1"
xmltodict = "0.13.0"
elasticsearch = {extras = ["async"], version = "8.17.0"}
motor = "3.6.0"
fastapi-cache2 = {extras = ["redis"], version = "0.2.2"}
aioredis = "2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
pylint = "2.17.5"
lib-test = {path = "../../libs/test"}

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
