[tool.poetry]
name = "lib-gateway"
version = "0.1.2"
description = ""
authors = ["kgulenc kuntaygulenc@gmail.com"]
packages = [
    { include = "mapa" },
]

[tool.poetry.dependencies]
python = "^3.12"
lib-core = {path = "../core"}
oracledb = "2.5.0"
zeep = "4.2.1"
requests_cache = "0.9.8" 

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
pylint = "2.17.5"
lib-test = {path = "../test"}

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
